tests/cmp/dc-label-confidentiality-in-integrity-position.trp
let val x = 60 raisedTo `<alice; #root-confidentiality>`
in printWithLabels x
end
